svc.yml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: acq-collector
    namespace: saga
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
    selector:
      app: acq-collector
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: acquisition
    namespace: saga
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
    selector:
      app: acquisition
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: activemq
    namespace: saga
  spec:
    ports:
    - name: admin
      port: 8161
      protocol: TCP
      targetPort: 8161
    - name: broker
      port: 61616
      protocol: TCP
      targetPort: 61616
    - name: amqp
      port: 5672
      protocol: TCP
      targetPort: 5672
    - name: stomp
      port: 61613
      protocol: TCP
      targetPort: 61613
    - name: mqtt
      port: 1883
      protocol: TCP
      targetPort: 1883
    - name: websocket
      port: 61614
      protocol: TCP
      targetPort: 61614
    selector:
      app: amqp-engine
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: admin-ui
    namespace: saga
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
    selector:
      app: admin-ui
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    name: administrator-ui
    namespace: saga
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
    selector:
      app: admin-ui
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: api-core
    namespace: saga
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
    selector:
      app: api-core
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: bpmn-api
    namespace: saga
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3001
    selector:
      app: bpmn-api
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: bpmn-engine
    namespace: saga
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      app: bpmn-engine
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: design-ui
    namespace: saga
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
    selector:
      app: design-ui
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: java-queue
    namespace: saga
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
    selector:
      app: java-queue
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: oauth2-server
    namespace: saga
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 4000
    selector:
      app: oauth2-server
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: prd-admin-ui
    namespace: saga
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
    selector:
      app: prd-admin-ui
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: prd-ui
    namespace: saga
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
    selector:
      app: production-ui
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: production-ui
    namespace: saga
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
    selector:
      app: production-ui
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: qc-admin-ui
    namespace: saga
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
    selector:
      app: qc-admin-ui
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: qc-control-ui
    namespace: saga
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
    selector:
      app: qc-control-ui
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: queue-acq-sch
    namespace: saga
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
    selector:
      app: queue-acq-sch
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: report-api
    namespace: saga
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
    selector:
      app: report-api
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: root-ui
    namespace: saga
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
    selector:
      app: root-ui
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: s3
    namespace: saga
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: s3
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    name: socket-server
    namespace: saga
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
    selector:
      app: socket-server
    sessionAffinity: ClientIP
    sessionAffinityConfig:
      clientIP:
        timeoutSeconds: 10800
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: training-api
    namespace: saga
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
    selector:
      app: training-api
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: training-ui
    namespace: saga
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
    selector:
      app: training-ui
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: uac
    namespace: saga
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3002
    selector:
      app: uac
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
