lb.yml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/affinity: cookie
      nginx.ingress.kubernetes.io/session-cookie-hash: sha1
      nginx.ingress.kubernetes.io/session-cookie-name: hash
      nginx.org/client-max-body-size: 50m
      nginx.org/websocket-services: socket-server
    name: lb
    namespace: saga
  spec:
    rules:
    - http:
        paths:
        - backend:
            serviceName: root-ui
            servicePort: 80
          path: /
        - backend:
            serviceName: oauth2-server
            servicePort: 80
          path: /oauth
        - backend:
            serviceName: uac
            servicePort: 80
          path: /oauth/access-controls
        - backend:
            serviceName: api-core
            servicePort: 80
          path: /api
        - backend:
            serviceName: socket-server
            servicePort: 80
          path: /socket-io
        - backend:
            serviceName: report-api
            servicePort: 80
          path: /report-api
        - backend:
            serviceName: bpmn-api
            servicePort: 80
          path: /workflow-api
        - backend:
            serviceName: administrator-ui
            servicePort: 80
          path: /administrator
        - backend:
            serviceName: training-ui
            servicePort: 80
          path: /training/guide
        - backend:
            serviceName: training-ui
            servicePort: 80
          path: /training
        - backend:
            serviceName: qc-admin-ui
            servicePort: 80
          path: /qc-admin
        - backend:
            serviceName: qc-control-ui
            servicePort: 80
          path: /quanlity-control
        - backend:
            serviceName: prd-admin-ui
            servicePort: 80
          path: /production-admin
        - backend:
            serviceName: prd-ui
            servicePort: 80
          path: /production
        - backend:
            serviceName: design-ui
            servicePort: 80
          path: /design
        - backend:
            serviceName: socket-server
            servicePort: 80
          path: /ws/
        - backend:
            serviceName: bpmn-engine
            servicePort: 80
          path: /engine-rest
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
